# apis-instance-discworld

./: .gitignore  README.md  manage.py  pyproject.toml
apis_ontology/: models.py
apis_ontology/migrations/: 0002_rename_name2_place_name.py
data/: dump.json  export.sh
discworld/: asgi.py  settings.py  urls.py  wsgi.py
