[tool.poetry]
name = "discworld"
version = "0.1.0"
description = ""
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
readme = "README.md"
packages = [{include = "apis_ontology"}, {include = "discworld"}]

[tool.poetry.dependencies]
python = "^3.11"
apis-core = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.8.1"}
django-allow-cidr = "^0.7.1"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
