[tool.poetry]
name = "discworld"
version = "0.1.0"
description = ""
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
readme = "README.md"
packages = [{include = "apis_ontology"}, {include = "discworld"}]

[tool.poetry.dependencies]
python = "^3.11"
apis-core = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.9.0"}
apis-acdhch-default-settings = "^0.1.19"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
